# vulkan-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json  version.h.in  x64-mixed.cmake
.devcontainer/: Dockerfile  devcontainer.json
com.videonetics.vulkan/: pom.xml
com.videonetics.vulkan/src/com/videonetics/vulkan/: SimpleDemo.java  VKUtil.java
com.videonetics.vulkan/src/org/lwjgl/awt/: AWT.java
com.videonetics.vulkan/src/org/lwjgl/vulkan/awt/: AWTVK.java  AWTVKCanvas.java  PlatformWin32VKCanvas.java
vulkan_cpp_exe/: CMakeLists.txt
vulkan_cpp_exe/src/: main.cpp
vulkan_cpp_lib/: CMakeLists.txt
vulkan_cpp_lib/inc/: core_context.h  device.h  instance.h  vulkan_logging.h
vulkan_cpp_lib/include/: config.h  engine.h
vulkan_cpp_lib/src/: core_context.cpp  engine.cpp
vulkan_glfw_exe/: CMakeLists.txt
vulkan_glfw_exe/inc/: window.h
vulkan_glfw_exe/src/: main.cpp  window.cpp
